feat[api]: search article with key word (#89)
* feat[api]: search article with key word

* doc: api doc update
